tests/parser/tests/cases/should_fail/incomplete_spread_pattern/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:5
1 |   [ ..d ] := k;
  |       ^ here
  = note: Malformed spread pattern, expected 1 more `.` to complete the pattern.
